<resources>
    <string name="app_name">Joali</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Joali</string>
    <string name="menu_favorites">Mes favoris</string>
    <string name="menu_archives">Archives</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_contact">Nous contacter</string>
    <string name="menu_policy">Conditions d\'utilisations</string>
    <string name="menu_quit">Quitter</string>
    <string name="tab_globe">Au monde</string>
    <string name="tab_fav">Privilegiés</string>
    <string name="tab_local">Local</string>
    <string name="title_activity_auth">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="confirm_hint">Confirm Password</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
</resources>
