<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_joali"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_archives"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_archives" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="@string/app_name">
        <menu>

            <item
                android:id="@+id/nav_contact"
                android:title="@string/menu_contact" />
            <item
                android:id="@+id/nav_policy"
                android:title="@string/menu_policy" />
            <item
                android:id="@+id/nav_quit"
                android:title="@string/menu_quit" />
        </menu>
    </item>

</menu>
