<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp" />



    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/ic_edit_profile"
            android:layout_width="70dp"
            android:layout_gravity="center"
            android:layout_height="70dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:text="Lorem Ipsum"
            android:textSize="18sp" />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="2dp"
            android:text="pays" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="36dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:scrollbars="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />
    <LinearLayout
        android:layout_width="200dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:gravity="bottom"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/menu_contact"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:gravity="bottom"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/menu_policy"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:gravity="bottom"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/menu_quit"/>
    </LinearLayout>


</LinearLayout>